--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "author": "Your Name",
   "license": "ISC",
   "scripts": {
-    "start": "electron .",
-    "dist": "electron-builder"
+    "start": "node server.js"
   },
   "build": {
     "appId": "com.vibelycoder.app",
@@ -47,6 +46,7 @@
     "adm-zip": "^0.5.16",
     "axios": "^1.7.2",
     "dotenv": "^17.2.1",
+    "express": "^4.19.2",
     "openai": "^4.33.0"
   },
   "devDependencies": {
